Fix jumpy scroll at the bottom

--- a/src/renderer/assets/stylesheets/appearance.sass
+++ b/src/renderer/assets/stylesheets/appearance.sass
@@ -4,9 +4,6 @@
   #background
     background: $bg
 
-  .pane-overlay
-    background: $bg
-
   .pane-close
     color: $fg
 
